--- a/SignUp-Register/src/Components/LoginSignUp/LoginSignUp.css
+++ b/SignUp-Register/src/Components/LoginSignUp/LoginSignUp.css
@@ -1,4 +1,4 @@
-.container{
+.container {
     display: flex;
     flex-direction: column;
     margin: auto;
@@ -9,7 +9,7 @@
     box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
 }
 
-.header{
+.header {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -18,28 +18,28 @@
     margin-top: 30px;
 }
 
-.text{
-    color:#3c009d ;
+.text {
+    color: #3c009d;
     font-size: 48px;
     font-weight: 700;
 }
 
-.underline{
+.underline {
     width: 61px;
     height: 6px;
-    background:#3c009d ;
+    background: #3c009d;
     border-radius: 10px;
 }
 
-.inputs{
-   margin-top: 54px;
-   display: flex;
-   flex-direction: column;
-   gap: 24px; 
+.inputs {
+    margin-top: 54px;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
 }
 
-.input{
-    display:flex;
+.input {
+    display: flex;
     align-items: center;
     margin: auto;
     width: 340px;
@@ -53,9 +53,9 @@
     margin: 0px 30px;
 }
 
-.input input{
+.input input {
     height: 50px;
-    width: 400px;
+    width: 250px;
     background: transparent;
     border: none;
     outline: none;
@@ -63,25 +63,25 @@
     font-size: 16px;
 }
 
-.forgot-password{
+.forgot-password {
     padding-left: 0px;
     margin-top: 30px;
-    color:#797979;
+    color: #797979;
     font-size: 16px;
 }
 
-.forgot-password span{
-    color:#4c00b4 ;
-    cursor:pointer
+.forgot-password span {
+    color: #4c00b4;
+    cursor: pointer;
 }
 
-.submit-container{
+.submit-container {
     display: flex;
     gap: 30px;
     margin: 60px auto;
 }
 
-.submit{
+.submit button {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -93,4 +93,9 @@
     font-size: 18px;
     font-weight: 700;
     cursor: pointer;
+}
+
+.gray button {
+    background: #eaeaea;
+    color: #676767;
 }
