--- a/SignUp-Register/src/index.css
+++ b/SignUp-Register/src/index.css
@@ -28,7 +28,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  background-color: #747bff;
+  background: linear-gradient(#b08aff, #6c1fff);
 }
 
 h1 {
